# Terminal-UI-Kit

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README_RU.md  SECURITY.md  antora-playbook.yml  package-lock.json  package.json  vcpkg.json  xmake.lua
.github/workflows/: ci.yml  docs.yml
.superpowers/sdd/: final-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md
benchmarks/: CMakeLists.txt  virtual_list_benchmark.cc
cmake/: TerminalUiKitConfig.cmake.in  TerminalUiKitDependencies.cmake  TerminalUiKitOptions.cmake  TerminalUiKitWarnings.cmake
doc/: prd.md
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: changelog.adoc  contributing.adoc  index.adoc  prd.adoc  security.adoc
docs/superpowers/plans/: 2026-07-21-progress-primitives.md  2026-07-21-progress-tree.md  2026-07-21-theme-system.md  2026-07-21-theme-viewer-example.md  2026-07-21-virtual-list.md  2026-07-22-streaming-model.md  2026-07-22-streaming-view-pr7b.md  2026-07-22-variable-height-virtualization.md  2026-07-24-syntax-theme.md
docs/superpowers/specs/: 2026-07-21-progress-primitives-design.md  2026-07-21-progress-tree-design.md  2026-07-21-theme-system-design.md  2026-07-21-theme-viewer-example-design.md  2026-07-21-virtual-list-design.md  2026-07-22-streaming-model-design.md  2026-07-22-text-selection-design.md  2026-07-22-variable-height-virtualization-design.md  2026-07-22-virtual-document-design.md  2026-07-23-markdown-view-design.md  2026-07-23-syntax-highlighting-design.md  2026-07-24-syntax-theme-design.md
examples/: CMakeLists.txt
examples/components_gallery/: CMakeLists.txt  main.cc
examples/markdown_viewer/: CMakeLists.txt  main.cc
examples/progress_viewer/: CMakeLists.txt  main.cc
examples/streaming_log_viewer/: CMakeLists.txt  main.cc
examples/task_dashboard/: CMakeLists.txt  main.cc
examples/theme_viewer/: CMakeLists.txt  main.cc
examples/virtual_document_viewer/: CMakeLists.txt  main.cc
examples/virtual_list_viewer/: CMakeLists.txt  main.cc
include/terminal_ui_kit/components/: code_view.h  collapsible_panel.h  indeterminate_progress.h  key_hint_bar.h  log_view.h  modal_stack.h  progress_bar.h  progress_tree.h  spinner.h  status.h  status_indicator.h  style_bridge.h  virtual_document.h  virtual_list.h
include/terminal_ui_kit/core/: selection.h  styled_text.h  text_position.h  text_range.h  text_style.h  text_wrap.h
include/terminal_ui_kit/document/: ansi_parser.h  log_model.h  streaming_document.h  wrapped_document.h
include/terminal_ui_kit/markdown/: markdown_document.h  markdown_view.h
include/terminal_ui_kit/syntax/: syntax_highlighter.h  syntax_theme.h
include/terminal_ui_kit/syntax/queries/: bash_highlights.h  c_highlights.h  cpp_highlights.h  diff_highlights.h  javascript_highlights.h  json_highlights.h  markdown_highlights.h  python_highlights.h  rust_highlights.h  yaml_highlights.h
include/terminal_ui_kit/testing/: virtual_screen.h
include/terminal_ui_kit/theme/: theme.h
src/terminal_ui_kit/: CMakeLists.txt
src/terminal_ui_kit/components/: code_view.cc  collapsible_panel.cc  indeterminate_progress.cc  key_hint_bar.cc  log_view.cc  modal_stack.cc  progress_bar.cc  progress_tree.cc  spinner.cc  status_indicator.cc  style_bridge.cc  virtual_document.cc  virtual_list.cc
src/terminal_ui_kit/core/: selection.cc  text_wrap.cc
src/terminal_ui_kit/document/: ansi_parser.cc  log_model.cc  streaming_document.cc  wrapped_document.cc
src/terminal_ui_kit/markdown/: markdown_document.cc  markdown_view.cc
src/terminal_ui_kit/syntax/: syntax_highlighter.cc  syntax_theme.cc
src/terminal_ui_kit/theme/: theme.cc
tests/terminal_ui_kit/: CMakeLists.txt
tests/terminal_ui_kit/rendering/: CMakeLists.txt  collapsible_panel_test.cc  indeterminate_progress_test.cc  key_hint_bar_test.cc  log_view_test.cc  markdown_view_test.cc  modal_stack_test.cc  progress_bar_test.cc  progress_tree_test.cc  spinner_test.cc  status_indicator_test.cc  style_bridge_test.cc  virtual_document_test.cc  virtual_list_test.cc  virtual_screen_test.cc
tests/terminal_ui_kit/unit/: CMakeLists.txt  ansi_parser_test.cc  log_model_test.cc  markdown_document_test.cc  selection_manager_test.cc  streaming_document_test.cc  styled_text_test.cc  syntax_highlighter_test.cc  syntax_theme_test.cc  text_position_test.cc  text_range_test.cc  text_wrap_test.cc  theme_test.cc  wrapped_document_test.cc
